--- a/templates/sections/experience.html
+++ b/templates/sections/experience.html
@@ -3,7 +3,10 @@
     <div class="project-card" data-aos="fade-up" style="width: 50%;">
         <span class="welcome-text">TECHTECH</span>
         <h3>Associate Data Analyst & UI/UX Designer</h3>
-        <p>Leading the support team while developing modern UI</p>
+        <p>Transforming raw data into meaningful insights through analysis.
+            
+        <p>Creating intuitive dashboards and UI/UX for data-driven decisions.</p>
+
         <p>Feb 25 - Present</p>
     </div>
 </section>
