--- a/templates/sections/experience.html
+++ b/templates/sections/experience.html
@@ -1,12 +1,13 @@
 <section id="experience" class="projects-container">
     <h2 class="section-title" data-aos="fade-right">Experience</h2>
-    <div class="project-card" data-aos="fade-up" style="width: 50%;">
-        <span class="welcome-text">TECHTECH</span>
+    
+    <div class="project-card" data-aos="fade-up">
+        <span class="company-name">TECHTECH</span>
         <h3>Associate Data Analyst & UI/UX Designer</h3>
-        <p>Transforming raw data into meaningful insights through analysis.
-            
-        <p>Creating intuitive dashboards and UI/UX for data-driven decisions.</p>
-
-        <p>Feb 25 - Present</p>
+        <p>
+            Transforming raw data into meaningful insights through analysis. 
+            Creating intuitive dashboards and UI/UX for data-driven decisions.
+        </p>
+        <span class="date">Feb 25 - Present</span>
     </div>
 </section>
