--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -16,6 +16,11 @@
                     <i class="fab fa-instagram"></i>
                 </a>
             </div>
+            
+            <div class="made-with-love">
+                Made with <span class="heart-icon">❤️</span> by <span class="cosmic-glow">Chinmay Chaudhari</span>
+            </div>
+                
             <p class="copyright">© 2026 Chinmay Chaudhari. All Rights Reserved.</p>
         </div>
     </div>
